--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "vue-owl-carousel",
+  "name": "@iodatalabs/vue-owl-carousel",
   "description": "VueJS wrapper for Owl Carousel",
   "version": "2.0.3",
   "author": {
     "name": "Leo Chien <s950329@gmail.com>"
   },
+  "contributors": [
+    "Yashodhan Singh <yashodhan.singh@unoapp.io>"
+  ],
   "bugs": {
-    "url": "https://github.com/s950329/vue-owl-carousel/issues"
+    "url": "https://github.com/iodatalabs/vue-owl-carousel/issues"
   },
   "keywords": [
     "vuejs",
@@ -45,12 +48,12 @@
     "webpack": "1.13.1",
     "webpack-merge": "^4.1.0"
   },
-  "homepage": "https://github.com/s950329/vue-owl-carousel#readme",
+  "homepage": "https://github.com/iodatalabs/vue-owl-carousel#readme",
   "license": "MIT",
   "main": "dist/vue-owl-carousel.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/s950329/vue-owl-carousel.git"
+    "url": "git+https://github.com/iodatalabs/vue-owl-carousel.git"
   },
   "scripts": {
     "build": "webpack --config ./webpack.config.js"
